--- a/frontend/gui/public/index.html
+++ b/frontend/gui/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>Tom Mazurek | Portfolio Website</title>
   </head>
   <body style="background-color: rgb(0,21,41)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
